k8s/sso-agent.yaml
apiVersion: v1
kind: Service
metadata:
  name: sso-agent
  namespace: aidt
  labels:
    app: sso-agent
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: sso-agent
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  labels:
    app: sso-agent
  name: sso-agent
  namespace: aidt
spec:
  ingressClassName: nginx
  rules:
  - host: sso.qa.aidt.school
    http:
      paths:
      - backend:
          service: 
            name: sso-agent
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
    - hosts:
      - sso.qa.aidt.school
      secretName: sso-agent-endpoint-cert

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sso-agent
  namespace: aidt
  labels:
    app: sso-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sso-agent
  template:
    metadata:
      labels:
        app: sso-agent
    spec:
      imagePullSecrets:
      - name: ncloud-reg-cred
      containers:
      - name: sso-agent-js
        image: aidt-prod.ncr.gov-ntruss.com/sso-agent-js:v0.0.91
        imagePullPolicy: Always
        ports:
        - containerPort: 80
      - name: sso-agent-spring
        image: aidt-prod.ncr.gov-ntruss.com/sso-agent-spring:v0.0.91-REDIS_v2
        imagePullPolicy: Always
        ports:
        - containerPort: 8084
        startupProbe:
          httpGet:
            path: /liveCheckRequest
            port: 80
          initialDelaySeconds: 3
          failureThreshold: 10
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /liveCheckRequest
            port: 80
          initialDelaySeconds: 0
          failureThreshold: 3
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
        livenessProbe:
          httpGet:
            path: /liveCheckRequest
            port: 80
          initialDelaySeconds: 0
          failureThreshold: 3
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 1
